2005-05-17  Caleb Moore <c.moore@student.unsw.edu.au>

	* A_whole_bunch_o'_files: Did a bit of fiddling. Now Children are stored in the RsvgNode structure, since DOM seems to mandate that everything be able to have children. I shall get rid of virtual functions for adding children soon.
	* rsvg-filters.c: Made merge nodes and light sources proper objects.
	* rsvg-marker.c: Converted markers to use the new system and broke them BADLY.
	* rsvg-structures.c: made structual element relating functions a bit more generic. Saves some code duplication.
	
2005-05-16  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c, rsvg-structure.c, rsvg-mask.c, rsvg.c: more DOM stuff. Now orthodox nodes are created, then attributes are assigned then are packed onto the top of the tree. I have moved all conforming node creation bits to rsvg-filter-handler-start so I remember what's left to convert. Probably opened a few bugs, you know how it is. Theoretically, it is now possible to implement external DOM interfaces to create new nodes and add nodes to other nodes. Attributes can be edited as much as the user wants for many elements now.
	
2005-05-14  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.c: Bug 302905
	* rsvg-text.c: Bug 170164
	* rsvg-image.c: Bug 304045
	
2005-05-15  Caleb Moore <c.moore@student.unsw.edu.au>

	* everwhere: misc movement towards a DOM interface
	
2005-03-16  Caleb Moore <c.moore@student.unsw.edu.au>

	* everywhere: we no longer have RsvgDef* we have RsvgNode*
	* rsvg-defs.h, rsvg-private.h: moved RsvgNode to rsvg-private
	* rsvg-structure.h: get rid of RsvgDefsDrawable, integrated with RsvgNode
	* rsvg-private.h: store states with pointers, as per dom's suggestion
	* everywhere: fixed everything up to get stuff to compile. N.b. there is probably quite a few memleaks and stuff... valgrind doesn't work on my shiney new chip though.

2005-03-13  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-art-paint-server.c: Bug 170164
	* rsvg-structure.c: Ditto
	