@@ -1,5 +1,9 @@
 2005-05-17  Caleb Moore <c.moore@student.unsw.edu.au>
 
+	* rsvg_structure.c: Fixed a problem with <use> not working.
+
+2005-05-17  Caleb Moore <c.moore@student.unsw.edu.au>
+
 	* A_whole_bunch_o'_files: Did a bit of fiddling. Now Children are stored in the RsvgNode structure, since DOM seems to mandate that everything be able to have children. I shall get rid of virtual functions for adding children soon.
 	* rsvg-filters.c: Made merge nodes and light sources proper objects.
 	* rsvg-marker.c: Converted markers to use the new system and broke them BADLY.
